更新正文，加入使用示例

--- a/data/enabstract.tex
+++ b/data/enabstract.tex
@@ -4,35 +4,13 @@
 
 \enabstract{
 
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-	
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
-
-May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+此处是英文摘要，位于data/enabstract.tex 
 
 }
 
 \enkeywords{keyworkds1;~~keyworkds2;~~keyworkds3}
 
-\enpageheader{英文页眉标题}
+\enpageheader{英文页眉，位于data/enabstract.tex}
 
 % 使用makeenabstract生成英文摘要
 \makeenabstract
