--- a/data/intros.tex
+++ b/data/intros.tex
@@ -4,246 +4,56 @@
 
 \section{引言}
 
-测试引言，可以自动首行缩进。测试引言，可以自动首行缩进。测试引言，可以自动首行缩进。测试引言，可以自动首行缩进。测试引言，可以自动首行缩进。这是引用测试\cite{barnes2009patchmatch}\cite{barnes2009patchmatch2}\cite{barnes2009patchmatch3}\cite{barnes2009patchmatch4}\cite{barnes2009patchmatch5}\cite{barnes2009patchmatch6}\cite{barnes2009patchmatch7}\cite{barnes2009patchmatch8}\cite{barnes2009patchmatch9}\cite{barnes2009patchmatch10}\cite{barnes2009patchmatch11}\cite{barnes2009patchmatch12}\cite{barnes2009patchmatch13}\cite{barnes2009patchmatch14}\cite{barnes2009patchmatch15}\cite{barnes2009patchmatch16}\cite{barnes2009patchmatch17}\cite{barnes2009patchmatch18}。
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
-
-一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
-
-快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
-
-元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
-
-喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
-
-元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
-
-\section{研究现状}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
-
-一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
-
-快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
-
-元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
-
-喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
-
-元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-\subsection{小节x}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-
-\section{本文主要方法及思路}
-
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
-
-一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
-
-快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
-
-元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
-
-喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
-
-元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
+\subsection{引用参考文献}
+引用参考文献示例：在references.bib中添加参考文献对应的bibtex，使用$\backslash$cite\{\}引用论文的id，引用参考文献\cite{barnes2009patchmatch}。
+
+\subsection{插入图片}
+如图\ref{fig:figure1}所示，为在文章中插入图片的示例：在latex中使用$\backslash$begin\{figure\}插入图片，支持的格式有jpg、png、eps与pdf等；使用$\backslash$begin\{tabular\}插入三幅图像(一行三列)，如果只插入一副图像则不需要使用$\backslash$begin\{tabular\}。
+
+\begin{figure}[htb]
+	\centering
+	\setlength\tabcolsep{3pt}  % 同一行中的图片间隔
+	\vspace{5pt} % 图片上部的空白，如果太小的话，图片顶部会与正文内容十分接近
+	\begin{tabular}{ccc}
+		\includegraphics[width=0.32\textwidth]{baboon.jpg} &
+		\includegraphics[width=0.32\textwidth]{lena.jpg} &
+		\includegraphics[width=0.32\textwidth]{parrot.jpg} \\
+		(a) 图1 & (b) 图2 & (c) 图3 \\[1ex]
+	\end{tabular}
+	\caption{图片示例}
+	\label{fig:figure1}
+\end{figure}
+
+\subsection{插入公式}
+在文章中插入公式示例：
+\begin{equation}
+	c = a + b
+	\label{eq:equation1}
+\end{equation}
+
+\subsection{插入表格}
+
+如表格\ref{tb:table1}所示，为在文章中插入表格的示例。可以通过latex表格在线创建网站(https://www.tablesgenerator.com/)，通过用户界面形式创建表格，并转化为latex代码。
+
+\begin{table}[]
+	\caption{表格标题}
+	\label{tb:table1}
+	\centering
+	\begin{tabular}{|c|c|c|}
+		\hline
+		a   & b   & c   \\ \hline
+		1.1 & 1.2 & 1.3 \\ \hline
+		1.4 & 1.5 & 1.6 \\ \hline
+	\end{tabular}
+\end{table}
+
+\section{本文思路及研究方法}
+
+本文思路及研究内容
 
 \section{论文结构}
 
-元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
-
-团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
-
-一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
-
-快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
-
-元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
-
-喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
-
-元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
+论文结构
 
 
 
