--- a/data/intros.tex
+++ b/data/intros.tex
@@ -25,7 +25,7 @@
 \end{figure}
 
 \subsection{插入公式}
-在文章中插入公式示例：
+如公式\eqref{eq:equation1}所示，为在文章中插入公式示例：
 \begin{equation}
 	c = a + b
 	\label{eq:equation1}
