--- a/data/intros.tex
+++ b/data/intros.tex
@@ -5,10 +5,10 @@
 \section{引言}
 
 \subsection{引用参考文献}
-引用参考文献示例：在references.bib中添加参考文献对应的bibtex，使用$\backslash$cite\{\}引用论文的id，引用参考文献\cite{barnes2009patchmatch}。
+在references.bib中添加参考文献对应的bibtex，使用$\backslash$cite\{\}引用论文的id，如引用参考文献\cite{barnes2009patchmatch}。
 
 \subsection{插入图片}
-如图\ref{fig:figure1}所示，为在文章中插入图片的示例：在latex中使用$\backslash$begin\{figure\}插入图片，支持的格式有jpg、png、eps与pdf等；使用$\backslash$begin\{tabular\}插入三幅图像(一行三列)，如果只插入一副图像则不需要使用$\backslash$begin\{tabular\}。
+如图\ref{fig:figure1}所示，在文章中插入图片。使用$\backslash$begin\{figure\}插入图片，支持的格式有jpg、png、eps与pdf等，本例使用$\backslash$begin\{tabular\}插入三幅图像(一行三列)，如果只插入一副图像则不需使用$\backslash$begin\{tabular\}。
 
 \begin{figure}[htb]
 	\centering
@@ -25,7 +25,7 @@
 \end{figure}
 
 \subsection{插入公式}
-如公式\eqref{eq:equation1}所示，为在文章中插入公式示例：
+如公式\eqref{eq:equation1}所示，为公式示例：
 \begin{equation}
 	c = a + b
 	\label{eq:equation1}
@@ -33,7 +33,7 @@
 
 \subsection{插入表格}
 
-如表格\ref{tb:table1}所示，为在文章中插入表格的示例。可以通过latex表格在线创建网站(https://www.tablesgenerator.com/)，通过用户界面形式创建表格，并转化为latex代码。
+如表格\ref{tb:table1}所示，为表格示例。可以通过"https://www.tablesgenerator.com/"以用户界面形式创建表格，并将表格转化为latex代码。
 
 \begin{table}[]
 	\caption{表格标题}
