minor update in main.tex

--- a/main.tex
+++ b/main.tex
@@ -62,6 +62,7 @@
 %\nocite{*}                                        	% 若将此命令屏蔽掉，则未引用的文献不会出现在文后的参考文献中。 
 \bibliography{references}					
 
+\renewcommand\thefigure{A.\arabic{figure}}			% 将附录中的图像的id的章节num设置为A
 \include{data/appendix}                   			% 附录
 \include{data/acknowledgements}						% 致谢
 \include{data/publications}							% 研究成果
